# MessageQueue

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: MessageQueue.hpp
src/: MessageQueue.cxx  Sample.cxx
test/: test_MessageQueue.cxx
